--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'org.apache.poi:poi:5.3.0'
     implementation 'org.apache.poi:poi-ooxml:5.3.0'
     implementation 'org.apache.commons:commons-csv:1.12.0'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
 
 }
 
