--- a/.github/workflows/basic-ci.yml
+++ b/.github/workflows/basic-ci.yml
@@ -12,8 +12,6 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-22.04
-    permissions:
-      contents: read
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK
@@ -29,9 +27,7 @@ jobs:
 
   test:
     name: Unit-tests
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
+    runs-on: ubuntu-22.04
     needs: build
     steps:
       - name: Run tests
