--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     implementation 'org.apache.commons:commons-csv:1.12.0'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
 
+    testImplementation 'org.instancio:instancio-junit:5.2.1'
+
+
 }
 
 tasks.named('test') {
