--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ group = 'kz'
 version = '0.0.1-SNAPSHOT'
 
 java {
+    sourceCompatibility = JavaVersion.VERSION_23
+    targetCompatibility = JavaVersion.VERSION_23
     toolchain {
         languageVersion = JavaLanguageVersion.of(23)
     }
