--- a/.github/workflows/basic-ci.yml
+++ b/.github/workflows/basic-ci.yml
@@ -10,38 +10,17 @@ on:
 
 jobs:
   build:
-    name: Build the project
+    name: Build and Test
     runs-on: ubuntu-22.04
     steps:
+      - name: Checkout
       - uses: actions/checkout@v4
-      - name: Set up JDK
-        uses: actions/setup-java@v4
+      - name: Setup JDK
+      - uses: actions/setup-java@v4
         with:
           java-version: 23
           distribution: 'temurin'
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v4
       - name: Build the project
-        run: |
-          ./gradlew -x test build --no-daemon
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: build/libs/*.jar
-
-  test:
-    name: Run tests
-    runs-on: ubuntu-22.04
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifacts
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v4
-      - name: Run tests
-        run: |
-          ./gradlew test --no-daemon
+        run: ./gradlew clean build --no-daemon
