--- a/.github/workflows/basic-ci.yml
+++ b/.github/workflows/basic-ci.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
       - name: Setup JDK
-      - uses: actions/setup-java@v4
+        uses: actions/setup-java@v4
         with:
           java-version: 23
           distribution: 'temurin'
