--- a/.github/workflows/basic-ci.yml
+++ b/.github/workflows/basic-ci.yml
@@ -23,4 +23,6 @@ jobs:
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v4
       - name: Build the project
-        run: ./gradlew clean build --no-daemon
+        run: ./gradlew clean build -x test --no-daemon
+      - name: Test
+        run: ./gradlew test --no-daemon
