--- a/.github/workflows/basic-ci.yml
+++ b/.github/workflows/basic-ci.yml
@@ -22,7 +22,7 @@ jobs:
           distribution: 'temurin'
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v4
-      - name: Build the project
-        run: ./gradlew clean build -x test --no-daemon
-      - name: Test
-        run: ./gradlew test --info --no-daemon
+      - name: Building the project
+        run: ./gradlew build -x test --no-daemon
+      - name: Testing
+        run: ./gradlew test --no-daemon
