--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'org.apache.commons:commons-csv:1.12.0'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
 
+    implementation("org.springframework.statemachine:spring-statemachine-starter:4.0.1")
+
     testImplementation 'org.instancio:instancio-junit:5.2.1'
 
 
