--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   minio:
-    image: docker.io/bitnami/minio:2022
+    image: docker.io/bitnami/minio:latest
     ports:
       - '9000:9000'
       - '9001:9001'
