--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,8 @@ minio:
   price-lists-folder: /s3/offer-processing/price-lists
   price-lists-url: /price-lists
 
+  part-size: 5242880
+
 logging:
   level:
     org.hibernate.orm.connections.pooling: error
