--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,11 @@ spring:
       ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  rabbit:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 minio:
   url: http://localhost:9000
   bucket: offer-processing
