--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
     testImplementation 'org.instancio:instancio-junit:5.2.1'
+    implementation('com.h2database:h2')
 
 
 }
