--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
     testImplementation 'org.instancio:instancio-junit:5.2.1'
-    implementation('com.h2database:h2')
-
+    testImplementation "org.testcontainers:junit-jupiter:1.21.3"
+    testImplementation "org.testcontainers:postgresql:1.21.3"
 
 }
 
