--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   minio:
-    image: docker.io/bitnami/minio:latest
+    image: minio/minio:RELEASE.2025-07-23T15-54-02Z
     ports:
       - '9000:9000'
       - '9001:9001'
@@ -14,6 +14,7 @@ services:
       - MINIO_ROOT_USER=root
       - MINIO_ROOT_PASSWORD=az2RGrBK08LV
       - MINIO_DEFAULT_BUCKETS=offer-processing
+    command: minio server /data --console-address ":9001"
 
   postgres:
     image: postgres:17
