--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     name: Testing
+    services:
+      docker:
+        image: docker:20.10.16
+        options: --privileged
 
     steps:
       - name: Checkout code
