--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,101 +1,27 @@
-#name: main-ci
-#on:
-#  push:
-#    branches:
-#      - master
-#permissions:
-#  contents: read
-#  checks: write
-#
-#jobs:
-#  build-and-test:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/setup-java@v4
-#        with:
-#          java-version: 17
-#          distribution: 'temurin'
-#      - uses: gradle/actions/setup-gradle@v4
-#      - run: ./gradlew build --no-daemon
-#      - name: Test Report
-#        uses: dorny/test-reporter@v1
-#        if: always()
-#        with:
-#          name: JUnit Tests
-#          path: build/test-results/test/*.xml
-#          reporter: java-junit
-
 name: main-ci
-
 on:
   push:
-    branches: [ master ]
-
+    branches:
+      - master
 permissions:
   contents: read
   checks: write
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: temurin
+          distribution: 'temurin'
       - uses: gradle/actions/setup-gradle@v4
-
-      - name: Build
-        run: ./gradlew assemble --no-daemon
-
-      # сохранить артефакт сборки (если нужен)
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-build
-          path: build/libs/*.jar
-
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build     # <- WAIT FOR BUILD
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: temurin
-      - uses: gradle/actions/setup-gradle@v4
-
-      # прогоняем тесты
-      - name: Run tests
-        run: ./gradlew test --no-daemon
-
-      # сохраняем результат тестов
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: build/test-results/test/*.xml
-
-
-  report:
-    runs-on: ubuntu-latest
-    needs: test   # <- WAIT FOR TEST
-
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: test-results
-          path: test-results
-
+      - run: ./gradlew build --no-daemon --info
       - name: Test Report
         uses: dorny/test-reporter@v1
         if: always()
         with:
           name: JUnit Tests
-          path: test-results/*.xml
+          path: build/test-results/test/*.xml
           reporter: java-junit
