--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
 name: main-ci
+
 on:
   push:
     branches:
       - master
+
 permissions:
   contents: read
   checks: write
@@ -15,22 +17,19 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: 'temurin'
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-#      - uses: gradle/actions/setup-gradle@v4
-      - run: ./gradlew clean test --no-daemon
-      - run: ./gradlew build --no-daemon
-      - name: Test Report
-        uses: dorny/test-reporter@v1
+          distribution: temurin
+      - uses: gradle/actions/setup-gradle@v4
+      - run: ./gradlew build --no-daemon --info
+
+      - uses: dorny/test-reporter@v1
         if: always()
         with:
           name: JUnit Tests
           path: build/test-results/test/*.xml
           reporter: java-junit
+
+      - if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-output
+          path: build/libs/*.jar
