--- a/build.gradle
+++ b/build.gradle
@@ -26,33 +26,32 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
+    def springBootStarterVersion = '4.0.0'
+    def stateMachineVersion = '4.0.1'
+    def mapstructVersion = '1.6.3'
+    def lombokVersion = '1.18.42'
+    def poiVersion = '5.3.0'
+    def minioVersion = '8.5.14'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:' + springBootStarterVersion
+    implementation 'org.springframework.boot:spring-boot-starter-validation:' + springBootStarterVersion
+    implementation 'org.springframework.boot:spring-boot-starter-web:' + springBootStarterVersion
+    implementation 'org.springframework.boot:spring-boot-starter-amqp:' + springBootStarterVersion
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:' + springBootStarterVersion
+    compileOnly 'org.projectlombok:lombok:' + lombokVersion
+    annotationProcessor 'org.projectlombok:lombok:' + lombokVersion
+    implementation 'org.mapstruct:mapstruct:' + mapstructVersion
+    annotationProcessor 'org.mapstruct:mapstruct-processor:' + mapstructVersion
+    implementation 'org.apache.poi:poi:' + poiVersion
+    implementation 'org.apache.poi:poi-ooxml:' + poiVersion
+    implementation 'org.springframework.statemachine:spring-statemachine-starter:' + stateMachineVersion
+    implementation 'io.minio:minio:' + minioVersion
     runtimeOnly 'org.postgresql:postgresql'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    implementation 'io.minio:minio:8.5.14'
-
-    implementation 'org.mapstruct:mapstruct:1.6.3'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
-
-    implementation 'org.apache.poi:poi:5.3.0'
-    implementation 'org.apache.poi:poi-ooxml:5.3.0'
     implementation 'org.apache.commons:commons-csv:1.12.0'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
-
-    implementation("org.springframework.statemachine:spring-statemachine-starter:4.0.1")
     implementation 'org.springframework:spring-messaging'
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
-
     testImplementation 'org.instancio:instancio-junit:5.2.1'
-    implementation('com.h2database:h2')
-
-
 }
 
 tasks.named('test') {
