--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,9 @@ permissions:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOs-latest]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -20,7 +23,6 @@ jobs:
           distribution: temurin
       - uses: gradle/actions/setup-gradle@v4
       - run: ./gradlew build --no-daemon
-
       - uses: dorny/test-reporter@v1
         if: always()
         with:
