--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-  pull_request:
 
 permissions:
   contents: read
@@ -12,100 +11,30 @@ permissions:
 
 jobs:
 
-  # -------------------- BUILD --------------------
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOs-latest]
     steps:
       - uses: actions/checkout@v4
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
 
-      # Gradle cache
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
+      - name: Start Docker daemon
+        run: |
+          sudo systemctl start docker
+          docker info
       - uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: temurin
-
       - uses: gradle/actions/setup-gradle@v4
+      - run: ./gradlew build --no-daemon
 
-      - run: ./gradlew assemble --no-daemon
-
-      # Артефакты сборки (JAR, build/libs)
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: build/libs/
-
-
-  # -------------------- TESTS --------------------
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - uses: actions/checkout@v4
-
-      # Кэш
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: temurin
-
-      - uses: gradle/actions/setup-gradle@v4
-
-      - run: ./gradlew test --no-daemon
-
-      # Создаём тестовый отчёт
-      - name: Test Report
-        uses: dorny/test-reporter@v1
+      - uses: dorny/test-reporter@v1
         if: always()
         with:
           name: JUnit Tests
           path: build/test-results/test/*.xml
           reporter: java-junit
-
-      # Загружаем артефакты тестов (например HTML)
-      - name: Upload test artifacts
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-artifacts
-          path: build/reports/tests/test/
-
-
-  # -------------------- QODANA --------------------
-  qodana:
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Qodana Scan
-        uses: JetBrains/qodana-action@v2023.3
-        with:
-          use-caches: true
-
-      - name: Upload Qodana Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: qodana-report
-          path: qodana/report/
