--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     testImplementation "org.testcontainers:junit-jupiter:1.21.3"
     testImplementation "org.testcontainers:postgresql:1.21.3"
-    implementation('com.h2database:h2')
+    testImplementation('com.h2database:h2')
 }
 
 tasks.named('test') {
