--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           --health-retries 5
 
       minio:
-        image: bitnami/minio
+        image: minio/minio:RELEASE.2025-12-06T00-00-00Z
         volumes:
           - 'minio_data:/data'
         ports:
