--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,21 +23,21 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
-      minio:
-        image: minio/minio:RELEASE.2025-12-06T00-00-00Z
-        volumes:
-          - 'minio_data:/data'
-        ports:
-          - 9000:9000
-        options: >-
-          --health-cmd "curl -f http://localhost:9000/minio/health/live || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        env:
-          MINIO_ROOT_USER: root
-          MINIO_ROOT_PASSWORD: az2RGrBK08LV
+#
+#      minio:
+#        image: minio/minio:RELEASE.2025-12-06T00-00-00Z
+#        volumes:
+#          - 'minio_data:/data'
+#        ports:
+#          - 9000:9000
+#        options: >-
+#          --health-cmd "curl -f http://localhost:9000/minio/health/live || exit 1"
+#          --health-interval 10s
+#          --health-timeout 5s
+#          --health-retries 5
+#        env:
+#          MINIO_ROOT_USER: root
+#          MINIO_ROOT_PASSWORD: az2RGrBK08LV
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
