--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 #          --health-retries 5
 #
       minio:
-        image: minio/minio:RELEASE.2025-12-06T00-00-00Z
+        image: docker.io/bitnami/minio:latest
         volumes:
           - 'minio_data:/data'
         ports:
