--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,23 @@ jobs:
           java-version: 17
           distribution: temurin
       - uses: gradle/actions/setup-gradle@v4
+
+      - name: Wait for MinIO
+        run: |
+          for i in {1..30}; do
+            curl -f http://localhost:9000/minio/health/live && break
+            echo "Waiting for MinIO..."
+            sleep 2
+          done
+
+      - name: Wait for RabbitMQ
+        run: |
+          for i in {1..30}; do
+            nc -z localhost 5672 && break
+            echo "Waiting for RabbitMQ..."
+            sleep 2
+          done
+
       - name: Build and test
         run: ./gradlew build --no-daemon
         env:
