--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,11 +59,11 @@ jobs:
       - name: Build and test
         run: ./gradlew build --no-daemon
         env:
-          SPRING_RABBITMQ_HOST: localhost
+          SPRING_RABBITMQ_HOST: rabbitmq
           SPRING_RABBITMQ_PORT: 5672
           SPRING_RABBITMQ_USERNAME: guest
           SPRING_RABBITMQ_PASSWORD: guest
-          MINIO_URL: http://localhost:9000
+          MINIO_URL: http://minio:9000
           MINIO_BUCKET: offer-processing
           MINIO_ACCESS_KEY: root
           MINIO_SECRET_KEY: az2RGrBK08LV
