--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Wait for MinIO
         run: |
           for i in {1..30}; do
-            nc -z localhost 9000 && break
+            nc -z minio 9000 && break
             echo "Waiting for MinIO..."
             sleep 2
           done
