--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Wait for MinIO
         run: |
           for i in {1..30}; do
-            nc -z minio 9000 && break
+            curl -f http://localhost:9000/minio/health/live && break || echo "MinIO not ready yet..."
             echo "Waiting for MinIO..."
             sleep 2
           done
@@ -51,7 +51,7 @@ jobs:
       - name: Wait for RabbitMQ
         run: |
           for i in {1..30}; do
-            nc -z localhost 5672 && break
+            nc -z localhost 5672 && break || echo "RabbitMQ not ready yet..."
             echo "Waiting for RabbitMQ..."
             sleep 2
           done
