--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Wait for MinIO
         run: |
           for i in {1..30}; do
-            curl -f http://localhost:9000/minio/health/live && break || echo "MinIO not ready yet..."
+            curl -f http://minio:9000/minio/health/live && break || echo "MinIO not ready yet..."
             echo "Waiting for MinIO..."
             sleep 2
           done
