--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Wait for MinIO
         run: |
           for i in {1..30}; do
-            curl -f http://minio:9000/minio/health/live && break || echo "MinIO not ready yet..."
+            curl -f http://localhost:9000/minio/health/live && break || echo "MinIO not ready yet..."
             echo "Waiting for MinIO..."
             sleep 2
           done
@@ -63,7 +63,7 @@ jobs:
           SPRING_RABBITMQ_PORT: 5672
           SPRING_RABBITMQ_USERNAME: guest
           SPRING_RABBITMQ_PASSWORD: guest
-          MINIO_URL: http://minio:9000
+          MINIO_URL: http://localhost:9000
           MINIO_BUCKET: offer-processing
           MINIO_ACCESS_KEY: root
           MINIO_SECRET_KEY: az2RGrBK08LV
