--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,16 @@ name: main-ci
 
 on:
   push:
-    branches:
-      - master
-
-permissions:
-  contents: read
-  checks: write
+    branches: ["master"]
+  pull_request:
+    branches: ["master"]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      checks: write
     services:
       rabbitmq:
         image: rabbitmq:3-management
@@ -33,14 +33,17 @@ jobs:
           MINIO_ROOT_USER: root
           MINIO_ROOT_PASSWORD: az2RGrBK08LV
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup JDK
+        uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: temurin
-      - uses: gradle/actions/setup-gradle@v4
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
-      - name: Build and test
+      - name: Build and Test
         run: ./gradlew build --no-daemon
         env:
           SPRING_RABBITMQ_HOST: rabbitmq
@@ -52,9 +55,22 @@ jobs:
           MINIO_ACCESS_KEY: root
           MINIO_SECRET_KEY: az2RGrBK08LV
 
-      - uses: dorny/test-reporter@v1
+      - name: Generate test report
+        uses: dorny/test-reporter@v1
         if: always()
         with:
           name: JUnit Tests
           path: build/test-results/test/*.xml
           reporter: java-junit
+
+  dependency-submission:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
